# meshtalk

./: SESSION_LOG.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: MercuryAndroidSDK-v0.2.5-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/hud/: meshtalk.html
app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp  speex_aec_jni.cpp
app/src/main/java/com/meshtalk/app/: MeshTalkActivity.kt  MeshTalkApplication.kt
app/src/main/java/com/meshtalk/app/audio/: AudioCaptureEngine.kt  AudioMixer.kt  AudioPlaybackEngine.kt  ClickRemovalFilter.kt  HeadTracker.kt  OpusCodec.kt  SpatialAudioEngine.kt  SpeexAec.kt  VadEngine.kt
app/src/main/java/com/meshtalk/app/hud/: HudRenderer.kt
app/src/main/java/com/meshtalk/app/mesh/: ChannelManager.kt  MeshTransport.kt  NanSupervisor.kt  PacketCodec.kt  PeerManager.kt  WifiAwareTransport.kt
app/src/main/java/com/meshtalk/app/service/: AudioStreamClient.kt  BootReceiver.kt  MeshTalkService.kt
app/src/main/java/com/meshtalk/app/vox/: VoxStateMachine.kt
app/src/main/java/com/openclaw/app/: BtPairActivity.kt  MeshTalkActivity.kt  MeshTalkApplication.kt
app/src/main/java/com/openclaw/app/audio/: AudioCaptureEngine.kt  AudioMixer.kt  AudioPlaybackEngine.kt  ClickRemovalFilter.kt  HeadTracker.kt  OpusCodec.kt  SpatialAudioEngine.kt  SpeexAec.kt  VadEngine.kt
app/src/main/java/com/openclaw/app/hud/: HudRenderer.kt
app/src/main/java/com/openclaw/app/mesh/: BlePhoneClient.kt  BluetoothRfcommTransport.kt  ChannelManager.kt  HotspotTransport.kt  MeshTransport.kt  NanSupervisor.kt  PacketCodec.kt  PeerManager.kt  TransportManager.kt  WifiAwareTransport.kt  WifiDirectTransport.kt  WifiLanTransport.kt
app/src/main/java/com/openclaw/app/service/: AudioStreamClient.kt  BootReceiver.kt  MeshTalkService.kt
app/src/main/java/com/openclaw/app/vox/: VoxStateMachine.kt
app/src/main/res/layout/: activity_meshtalk.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/meshtalk/app/mesh/: PacketCodecTest.kt
app/src/test/java/com/meshtalk/app/vox/: VoxStateMachineTest.kt
app/src/test/java/com/openclaw/app/mesh/: PacketCodecTest.kt
app/src/test/java/com/openclaw/app/vox/: VoxStateMachineTest.kt
docs/: ARCHITECTURE.md  NAN_DEEP_INVESTIGATION.md  TRANSPORT_DEEP_INVESTIGATION.md  V2_BLE_PHONE_ARCHITECTURE.md  WIFI_AWARE_INVESTIGATION.md
mesh-bridge/: Dockerfile  bridge.py  deploy.sh  iphone-pwa.html  pyproject.toml  requirements.txt  start.sh  test_rns.py
scripts/: deploy.sh  watchdog.sh
server/: pyproject.toml  server.py  start.sh
